force-app/main/default/objects/DMU_Data_Manual__c/DMU_Data_Manual__c.object-meta.xml
<CustomObject>
    <label>DMU Data Manual</label>
    <nameField>
        <displayFormat>DMU-{000000000}</displayFormat>
        <label>Data No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMU Data Manual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>