force-app/main/default/objects/DMU_Data_Manual__c/fields/alamat1__c.field-meta.xml
<CustomField>
    <fullName>alamat1__c</fullName>
    <label>alamat1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>