force-app/main/default/objects/DMU_Data_Manual__c/fields/alamat2__c.field-meta.xml
<CustomField>
    <fullName>alamat2__c</fullName>
    <label>alamat2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>