force-app/main/default/objects/DMU_Data_Manual__c/fields/alamat3__c.field-meta.xml
<CustomField>
    <fullName>alamat3__c</fullName>
    <label>alamat3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>