force-app/main/default/objects/DMU_Data_Manual__c/fields/Batchname__c.field-meta.xml
<CustomField>
    <fullName>Batchname__c</fullName>
    <label>Batchname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>