force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_AWB__c.field-meta.xml
<CustomField>
    <fullName>bto_AWB__c</fullName>
    <label>AWB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>