force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_Consignee__c.field-meta.xml
<CustomField>
    <fullName>bto_Consignee__c</fullName>
    <label>Policy Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>