force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_ConsigneeAddress__c.field-meta.xml
<CustomField>
    <fullName>bto_ConsigneeAddress__c</fullName>
    <label>Lokasi Custody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>