force-app/main/default/objects/DMU_Data_Manual__c/fields/BTO_Date__c.field-meta.xml
<CustomField>
    <fullName>BTO_Date__c</fullName>
    <label>BTO Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>