force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_DatePickUp__c.field-meta.xml
<CustomField>
    <fullName>bto_DatePickUp__c</fullName>
    <label>Tgl Pick Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>