force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_pagenumber__c.field-meta.xml
<CustomField>
    <fullName>bto_pagenumber__c</fullName>
    <label>pagenumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>