force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_policy_no__c.field-meta.xml
<CustomField>
    <fullName>bto_policy_no__c</fullName>
    <label>no polis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>