force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_policyTypeCode__c.field-meta.xml
<CustomField>
    <fullName>bto_policyTypeCode__c</fullName>
    <label>Jenis Dokument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>