force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_Recipient__c.field-meta.xml
<CustomField>
    <fullName>bto_Recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>