force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>bto_ReturnDate__c</fullName>
    <label>Tgl Retur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>