force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_ReturnReason__c.field-meta.xml
<CustomField>
    <fullName>bto_ReturnReason__c</fullName>
    <label>ReturnReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>