force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_ServiceBy__c.field-meta.xml
<CustomField>
    <fullName>bto_ServiceBy__c</fullName>
    <label>Servicer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>