force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_TrackingStatus__c.field-meta.xml
<CustomField>
    <fullName>bto_TrackingStatus__c</fullName>
    <label>TrackingStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>