force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_warehouse_boxFilling_no__c.field-meta.xml
<CustomField>
    <fullName>bto_warehouse_boxFilling_no__c</fullName>
    <label>Nomor BOX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>