force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_warehouse_outbound_dt__c.field-meta.xml
<CustomField>
    <fullName>bto_warehouse_outbound_dt__c</fullName>
    <label>Tgl Keluar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>