force-app/main/default/objects/DMU_Data_Manual__c/fields/bto_warehouse_picName__c.field-meta.xml
<CustomField>
    <fullName>bto_warehouse_picName__c</fullName>
    <label>PIC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>