force-app/main/default/objects/DMU_Data_Manual__c/fields/Consignee_Address1__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Address1__c</fullName>
    <label>Consignee Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>