force-app/main/default/objects/DMU_Data_Manual__c/fields/Consignee_Address__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Address__c</fullName>
    <label>Consignee Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>