force-app/main/default/objects/DMU_Data_Manual__c/fields/converted__c.field-meta.xml
<CustomField>
    <fullName>converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>converted</label>
    <type>Checkbox</type>
</CustomField>