force-app/main/default/objects/DMU_Data_Manual__c/fields/Count_IP__c.field-meta.xml
<CustomField>
    <fullName>Count_IP__c</fullName>
    <formula>IF (DMU_Status_F__c == &apos;IP&apos;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count IP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>