force-app/main/default/objects/DMU_Data_Manual__c/fields/Count_Not_Success__c.field-meta.xml
<CustomField>
    <fullName>Count_Not_Success__c</fullName>
    <description>IF ( Count_Success__c == 0, 1,0)</description>
    <formula>Count_Retur__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Not Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>