force-app/main/default/objects/DMU_Data_Manual__c/fields/Count_Retur__c.field-meta.xml
<CustomField>
    <fullName>Count_Retur__c</fullName>
    <formula>IF (DMU_Status_F__c == &apos;RETUR&apos;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Retur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>