force-app/main/default/objects/DMU_Data_Manual__c/fields/Count_Success__c.field-meta.xml
<CustomField>
    <fullName>Count_Success__c</fullName>
    <formula>Count_OK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>