force-app/main/default/objects/DMU_Data_Manual__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>