force-app/main/default/objects/DMU_Data_Manual__c/fields/Date_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_Delivery__c</fullName>
    <label>Date_Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>