force-app/main/default/objects/DMU_Data_Manual__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <label>Date_Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>