force-app/main/default/objects/DMU_Data_Manual__c/fields/Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Days__c</fullName>
    <label>Delivery Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>