force-app/main/default/objects/DMU_Data_Manual__c/fields/Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>Detail_Status__c</fullName>
    <label>Detail Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>