force-app/main/default/objects/DMU_Data_Manual__c/fields/Divisionname__c.field-meta.xml
<CustomField>
    <fullName>Divisionname__c</fullName>
    <label>Divisionname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>