force-app/main/default/objects/DMU_Data_Manual__c/fields/DMU_Data_Manual_Parent__c.field-meta.xml
<CustomField>
    <fullName>DMU_Data_Manual_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DMU Data Manual Parent</label>
    <referenceTo>DMU_Data_Manual__c</referenceTo>
    <relationshipLabel>DMU Data Manual</relationshipLabel>
    <relationshipName>DMU_Data_Manual</relationshipName>
    <type>Lookup</type>
</CustomField>