force-app/main/default/objects/DMU_Data_Manual__c/fields/DMU_Date2__c.field-meta.xml
<CustomField>
    <fullName>DMU_Date2__c</fullName>
    <formula>IF (!ISBLANK(Ship_Date__c), 
DATE(
  VALUE(left(Ship_Date__c,4)),
  VALUE(left(right(Ship_Date__c,4),2)),
  VALUE(right(Ship_Date__c,2))
)
,
IF (!ISBLANK(Generated_Date__c), 
DATE(
  VALUE(left(Generated_Date__c,4)),
  VALUE(left(right(Generated_Date__c,4),2)),
  VALUE(right(Generated_Date__c,2))
)
, NULL)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMU Date2</label>
    <type>Date</type>
</CustomField>