force-app/main/default/objects/DMU_Data_Manual__c/fields/DMU_Date__c.field-meta.xml
<CustomField>
    <fullName>DMU_Date__c</fullName>
    <label>DMU Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>