force-app/main/default/objects/DMU_Data_Manual__c/fields/DMU_Date_Monthly__c.field-meta.xml
<CustomField>
    <fullName>DMU_Date_Monthly__c</fullName>
    <formula>IF( ISBLANK(DMU_Date__c ) , NULL,
IF( LEN( DMU_Date__c ) = 8 ,  DATE(VALUE(left(DMU_Date__c,4)),VALUE(left(right(DMU_Date__c,4),2)), 1), Null ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMU Date Monthly</label>
    <type>Date</type>
</CustomField>