force-app/main/default/objects/DMU_Data_Manual__c/fields/DMU_Status__c.field-meta.xml
<CustomField>
    <fullName>DMU_Status__c</fullName>
    <label>DMU Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>