force-app/main/default/objects/DMU_Data_Manual__c/fields/DMU_Status_F__c.field-meta.xml
<CustomField>
    <fullName>DMU_Status_F__c</fullName>
    <formula>IF (Tracking_Status__c == &apos;OK&apos;, &apos;OK&apos;,
IF (Tracking_Status__c == &apos;RETUR&apos;, &apos;RETUR&apos;,
IF (Tracking_Status__c == &apos;IP&apos;, &apos;IP&apos;,
IF (Sent_Status__c == &apos;Sent&apos;, &apos;OK&apos;,
IF (Sent_Status__c == &apos;Non Email&apos;, &apos;OK&apos;,
IF (Delivery_Status__c == &apos;Success&apos;, &apos;OK&apos;, 
IF (Delivery_Status__c == &apos;Success, Received&apos;, &apos;OK&apos;,
IF (Sent_Email_Status__c == &apos;Send&apos;, &apos;OK&apos;,
IF (Sent_Email_Status__c == &apos;Non Email&apos;, 
&apos;OK&apos;,&apos;&apos;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMU Status F</label>
    <type>Text</type>
</CustomField>