force-app/main/default/objects/DMU_Data_Manual__c/fields/Download_SMS_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Download_SMS_Date_Time__c</fullName>
    <label>Download SMS Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>