force-app/main/default/objects/DMU_Data_Manual__c/fields/Email_Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Detail_Status__c</fullName>
    <label>Email Detail Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>