force-app/main/default/objects/DMU_Data_Manual__c/fields/Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ext_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>