force-app/main/default/objects/DMU_Data_Manual__c/fields/Ext_ID_Summary__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID_Summary__c</fullName>
    <label>Ext_ID_Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>