force-app/main/default/objects/DMU_Data_Manual__c/fields/Ext_ID_Summary_F__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID_Summary_F__c</fullName>
    <formula>LEFT(Ext_ID__c,  (LEN(Ext_ID__c) - 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ext_ID_Summary_F</label>
    <type>Text</type>
</CustomField>