force-app/main/default/objects/DMU_Data_Manual__c/fields/Field10__c.field-meta.xml
<CustomField>
    <fullName>Field10__c</fullName>
    <label>Field10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>