force-app/main/default/objects/DMU_Data_Manual__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <label>Generated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>