force-app/main/default/objects/DMU_Data_Manual__c/fields/Issued_date__c.field-meta.xml
<CustomField>
    <fullName>Issued_date__c</fullName>
    <label>Issued date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>