force-app/main/default/objects/DMU_Data_Manual__c/fields/Jenis_Kode_Polis__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Kode_Polis__c</fullName>
    <label>Jenis_Kode_Polis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>