force-app/main/default/objects/DMU_Data_Manual__c/fields/Jenis_Kode_Surat__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Kode_Surat__c</fullName>
    <label>Jenis/Kode Surat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>