force-app/main/default/objects/DMU_Data_Manual__c/fields/Lapse_Date__c.field-meta.xml
<CustomField>
    <fullName>Lapse_Date__c</fullName>
    <label>Lapse Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>