force-app/main/default/objects/DMU_Data_Manual__c/fields/Lokasi_Custody__c.field-meta.xml
<CustomField>
    <fullName>Lokasi_Custody__c</fullName>
    <label>Lokasi Custody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>