force-app/main/default/objects/DMU_Data_Manual__c/fields/Manifest_No__c.field-meta.xml
<CustomField>
    <fullName>Manifest_No__c</fullName>
    <label>Manifest No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>