force-app/main/default/objects/DMU_Data_Manual__c/fields/Mobile_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_1__c</fullName>
    <label>Mobile Phone 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>