force-app/main/default/objects/DMU_Data_Manual__c/fields/MSISDN__c.field-meta.xml
<CustomField>
    <fullName>MSISDN__c</fullName>
    <label>MSISDN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>