force-app/main/default/objects/DMU_Data_Manual__c/fields/NAMA__c.field-meta.xml
<CustomField>
    <fullName>NAMA__c</fullName>
    <label>NAMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>