force-app/main/default/objects/DMU_Data_Manual__c/fields/nama_dept__c.field-meta.xml
<CustomField>
    <fullName>nama_dept__c</fullName>
    <label>nama_dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>