force-app/main/default/objects/DMU_Data_Manual__c/fields/Nama_Kurir__c.field-meta.xml
<CustomField>
    <fullName>Nama_Kurir__c</fullName>
    <label>Nama Kurir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>