force-app/main/default/objects/DMU_Data_Manual__c/fields/Nama_Penerima_buku_polis__c.field-meta.xml
<CustomField>
    <fullName>Nama_Penerima_buku_polis__c</fullName>
    <label>Nama Penerima buku polis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>