force-app/main/default/objects/DMU_Data_Manual__c/fields/nama_produk__c.field-meta.xml
<CustomField>
    <fullName>nama_produk__c</fullName>
    <label>nama_produk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>