force-app/main/default/objects/DMU_Data_Manual__c/fields/Nomor_BOX_Filling__c.field-meta.xml
<CustomField>
    <fullName>Nomor_BOX_Filling__c</fullName>
    <label>Nomor BOX Filling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>