force-app/main/default/objects/DMU_Data_Manual__c/fields/OSM_Kurir__c.field-meta.xml
<CustomField>
    <fullName>OSM_Kurir__c</fullName>
    <label>OSM_Kurir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>