force-app/main/default/objects/DMU_Data_Manual__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <label>Owner Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>