force-app/main/default/objects/DMU_Data_Manual__c/fields/Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_To_Date__c</fullName>
    <label>Paid To Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>