force-app/main/default/objects/DMU_Data_Manual__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>