force-app/main/default/objects/DMU_Data_Manual__c/fields/PIC_Name__c.field-meta.xml
<CustomField>
    <fullName>PIC_Name__c</fullName>
    <label>PIC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>