force-app/main/default/objects/DMU_Data_Manual__c/fields/Pick_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Type__c</fullName>
    <label>Pick Up Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>