force-app/main/default/objects/DMU_Data_Manual__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>