force-app/main/default/objects/DMU_Data_Manual__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <label>Return Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>