force-app/main/default/objects/DMU_Data_Manual__c/fields/Send_date__c.field-meta.xml
<CustomField>
    <fullName>Send_date__c</fullName>
    <label>Send date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>