force-app/main/default/objects/DMU_Data_Manual__c/fields/Send_Method__c.field-meta.xml
<CustomField>
    <fullName>Send_Method__c</fullName>
    <label>Send Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>