force-app/main/default/objects/DMU_Data_Manual__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <label>Sent Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>