force-app/main/default/objects/DMU_Data_Manual__c/fields/Sent_SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>Sent_SMS_Status__c</fullName>
    <label>Sent SMS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>