force-app/main/default/objects/DMU_Data_Manual__c/fields/Service_By__c.field-meta.xml
<CustomField>
    <fullName>Service_By__c</fullName>
    <label>Service By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>