force-app/main/default/objects/DMU_Data_Manual__c/fields/Service_type__c.field-meta.xml
<CustomField>
    <fullName>Service_type__c</fullName>
    <label>Service type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>