force-app/main/default/objects/DMU_Data_Manual__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>ServiceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>