force-app/main/default/objects/DMU_Data_Manual__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <label>Ship Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>