force-app/main/default/objects/DMU_Data_Manual__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <label>Shipper Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>