force-app/main/default/objects/DMU_Data_Manual__c/fields/SMS_Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Detail_Status__c</fullName>
    <label>SMS Detail Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>