force-app/main/default/objects/DMU_Data_Manual__c/fields/SMS_Parsial__c.field-meta.xml
<CustomField>
    <fullName>SMS_Parsial__c</fullName>
    <label>SMS_Parsial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>