force-app/main/default/objects/DMU_Data_Manual__c/fields/SMTP_Description__c.field-meta.xml
<CustomField>
    <fullName>SMTP_Description__c</fullName>
    <label>SMTP Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>