force-app/main/default/objects/DMU_Data_Manual__c/fields/SOURCE_BTO__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_BTO__c</fullName>
    <label>SOURCE BTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>