force-app/main/default/objects/DMU_Data_Manual__c/fields/Submit_Status__c.field-meta.xml
<CustomField>
    <fullName>Submit_Status__c</fullName>
    <label>Submit_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>