force-app/main/default/objects/DMU_Data_Manual__c/fields/Tanda_terima_polis_sudah_dikembalikan_ke__c.field-meta.xml
<CustomField>
    <fullName>Tanda_terima_polis_sudah_dikembalikan_ke__c</fullName>
    <label>Tanda terima polis sudah dikembalikan ke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>