force-app/main/default/objects/DMU_Data_Manual__c/fields/Tanggal_Keluar__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Keluar__c</fullName>
    <label>Tanggal Keluar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>