force-app/main/default/objects/DMU_Data_Manual__c/fields/Tanggal_Nasabah_menerima_buku_polis__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Nasabah_menerima_buku_polis__c</fullName>
    <label>Tanggal Nasabah menerima buku polis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>