force-app/main/default/objects/DMU_Data_Manual__c/fields/TANGGAL_PICKUP__c.field-meta.xml
<CustomField>
    <fullName>TANGGAL_PICKUP__c</fullName>
    <label>TANGGAL PICKUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>