force-app/main/default/objects/DMU_Data_Manual__c/fields/Tanggal_terima_tanda_terima__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_terima_tanda_terima__c</fullName>
    <label>Tanggal terima tanda terima</label>
    <length>255</length>
    <type>Text</type>
</CustomField>