force-app/main/default/objects/DMU_Data_Manual__c/fields/Telp_1__c.field-meta.xml
<CustomField>
    <fullName>Telp_1__c</fullName>
    <label>Telp 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>