force-app/main/default/objects/DMU_Data_Manual__c/fields/Telp_2__c.field-meta.xml
<CustomField>
    <fullName>Telp_2__c</fullName>
    <label>Telp 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>