force-app/main/default/objects/DMU_Data_Manual__c/fields/Tgl_cetak__c.field-meta.xml
<CustomField>
    <fullName>Tgl_cetak__c</fullName>
    <label>Tgl cetak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>