force-app/main/default/objects/DMU_Data_Manual__c/fields/Tgl_pick_up__c.field-meta.xml
<CustomField>
    <fullName>Tgl_pick_up__c</fullName>
    <label>Tgl pick up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>