force-app/main/default/objects/DMU_Data_Manual__c/fields/Tgl_terima_data__c.field-meta.xml
<CustomField>
    <fullName>Tgl_terima_data__c</fullName>
    <label>Tgl terima  data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>