force-app/main/default/objects/DMU_Data_Manual__c/fields/The_Last__c.field-meta.xml
<CustomField>
    <fullName>The_Last__c</fullName>
    <defaultValue>true</defaultValue>
    <label>The Last</label>
    <type>Checkbox</type>
</CustomField>