force-app/main/default/objects/DMU_Data_Manual__c/fields/Total_Package__c.field-meta.xml
<CustomField>
    <fullName>Total_Package__c</fullName>
    <label>Total Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>