force-app/main/default/objects/DMU_Data_Manual__c/fields/Tujuan_Keluar__c.field-meta.xml
<CustomField>
    <fullName>Tujuan_Keluar__c</fullName>
    <label>Tujuan Keluar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>