force-app/main/default/objects/DMU_Data_Manual__c/fields/Type_Doc__c.field-meta.xml
<CustomField>
    <fullName>Type_Doc__c</fullName>
    <defaultValue>&quot;transaction statement (hardcopy)&quot;</defaultValue>
    <label>Type Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>