force-app/main/default/objects/DMU_Data_Manual__c/fields/Type_Kirim__c.field-meta.xml
<CustomField>
    <fullName>Type_Kirim__c</fullName>
    <label>Type Kirim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>