force-app/main/default/objects/DMU_Data_Manual__c/fields/Upload_Day__c.field-meta.xml
<CustomField>
    <fullName>Upload_Day__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <label>Upload Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>