force-app/main/default/objects/DMU_Data_Manual__c/fields/Weigth_kg__c.field-meta.xml
<CustomField>
    <fullName>Weigth_kg__c</fullName>
    <label>Weigth // kg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>