force-app/main/default/objects/DMU_Data_Manual__c/recordTypes/Daily_Data.recordType-meta.xml
<RecordType>
    <fullName>Daily_Data</fullName>
    <active>true</active>
    <label>Daily Data</label>
</RecordType>