force-app/main/default/objects/DMU_Data_Manual__c/recordTypes/Summary_Data.recordType-meta.xml
<RecordType>
    <fullName>Summary_Data</fullName>
    <active>true</active>
    <label>Summary Data</label>
</RecordType>