force-app/main/default/objects/DMU_Data_Manual__c/listViews/Update.listView-meta.xml
<ListView>
    <fullName>Update</fullName>
    <columns>NAME</columns>
    <columns>Type_Doc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Doc__c</field>
        <operation>equals</operation>
        <value>redelivery</value>
    </filters>
    <filters>
        <field>MSISDN__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Update</label>
    <language>en_US</language>
</ListView>